--- a/style/style.css
+++ b/style/style.css
@@ -50,3 +50,129 @@ line-height: 26px;
 letter-spacing: 0%;
 text-align: center;
 }
+.page {
+    border-radius: 16px;
+    background-color: rgba(13, 37, 92, 0.02);
+    ;
+    width: 1200px;
+    height: 1295px;
+
+    margin-left: 130px;
+    margin-right: 140px;
+    margin-top: 65px;
+}
+
+.page-title {
+    color: rgb(16, 44, 110);
+    font-family: "Azeret Mono", monospace;
+    font-size: 32px;
+    width: 852px;
+    height: 39px;
+    padding-top: 40px;
+    padding-left: 150px;
+    font-weight: 700;
+    line-height: 37px;
+    letter-spacing: 0%;
+    text-align: center;
+    
+}
+
+.page-discription {
+    color: rgb(17, 28, 53);
+    font-family: "Azeret Mono", monospace;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: center;
+    opacity: 0.7;
+    width: 852px;
+    height: 52px;
+    padding-top: 24px;
+    padding-left: 140px;
+    
+
+}
+.team {
+    display: flex;
+    margin-top: 57px;
+    justify-content: center;
+    border-radius: 16px;
+    background: linear-gradient(90.00deg, rgb(255, 255, 255), rgba(255, 255, 255, 0) 100%);
+    margin-left: 130px;
+    width: 946px;
+    height: 336px;
+    align-items: center;
+    justify-content: space-between;
+   
+}
+
+.team-banner1 {
+    width: 477px;
+    height: 219px;
+    padding-right: 140px;
+    padding-left: 50px;
+
+    padding-bottom: 100px;
+
+
+   
+}
+
+.team-title {
+    color: rgba(13, 19, 33, 0.7);
+    font-family: "Azeret Mono", monospace;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 36px;
+    letter-spacing: 0%;
+    padding-top: 20px;
+    width: 490px;
+
+}
+
+.team-discription {
+    color: rgb(13, 19, 33);
+    font-family: "Azeret Mono", monospace;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    padding-top: 25px;
+    opacity: 0.7;
+    width: 468px;
+}
+
+.btn2 {
+    box-sizing: border-box;
+    border: 1px solid rgb(13, 19, 33);
+    opacity: 0.7;
+    width: 151px;
+    height: 37px;
+    margin-top: 35px;
+    cursor: pointer;
+}
+.team-banner1,
+.layer1 {
+    /* padding-right: 40px; */
+    margin-right: 100px;
+    width: 259px;
+    height: 217px;
+    padding-bottom: 30px;
+
+}
+.team2 {
+    display: flex;
+    margin-top: 57px;
+    justify-content: center;
+    border-radius: 16px;
+    background: linear-gradient(90.00deg, rgb(255, 255, 255), rgba(255, 255, 255, 0) 100%);
+    margin-left: 130px;
+    width: 946px;
+    height: 336px;
+    align-items: center;
+}
+
+.layer2 {
+    margin-right: 140px;
+}
