--- a/style/style.css
+++ b/style/style.css
@@ -176,3 +176,76 @@ text-align: center;
 .layer2 {
     margin-right: 140px;
 }
+.team3-title {
+    color: rgb(13, 19, 33);
+    font-family: "Azeret Mono", monospace;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 37px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+.team3 {
+    text-align: center;
+    width: 852px;
+    height: 37px;
+    align-items: 100px;
+    margin-left: 300px;
+}
+
+.team3-discription {
+    color: rgb(13, 19, 33);
+    font-family: "Azeret Mono", monospace;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: center;
+    opacity: 0.7;
+    padding-top: 20px;
+
+}
+
+.video-style {
+    width: 1000px;
+    height: 500px;
+    padding: 40px;
+    border-radius: 16px;
+    border: 1px solid rgba(11, 18, 32, 0.2);
+    background-color: rgb(255, 255, 255);
+    ;
+    margin-left: 140px;
+    margin-top: 140px;
+}
+.layer3 {
+    /* text-align: center; */
+}
+
+.layer3-title {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 37px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-top: 70px;
+    margin-left: 100px;
+}
+
+.layer3-discription {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: center;
+    opacity: 0.7;
+    width: 842px;
+    margin-left: 310px;
+    align-items: center;
+    padding-top: 20px;
+}
+
