--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-/* font-family: "Work Sans", sans-serif; */
-{
+*{
     margin:0;
     padding:0;
 }
@@ -15,7 +13,7 @@ border: none;
 }
 #honda{
     height: 650px;
-    width: 1550px;
+    width: 100%;
     background-image: url("../assets/Hero-bg.png");
     background-size: cover;
     background-position: center ;
@@ -247,5 +245,136 @@ text-align: center;
     margin-left: 310px;
     align-items: center;
     padding-top: 20px;
+}
+.layer4 {
+    margin-left: 130px;
+    border-radius: 16px;
+    background: rgba(255, 76, 30, 0.05);
+    padding: 40px;
+    width: 300px;
+    height: 250px;
+}
+
+.layer4-title {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 24px;
+    font-weight: 800;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: left;
+    padding-bottom: 20px;
+}
+
+.layer4-image {
+    width: 56px;
+    height: 56px;
+    padding-bottom: 20px;
+}
+
+.layer4-discription {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: left;
+    opacity: 0.7;
+    padding-bottom: 10px;
+}
+
+.layer4-btn {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19px;
+    letter-spacing: 0%;
+    text-align: left;
+    text-decoration-line: underline;
+}
+
+.layer4-banner {
+    display: flex;
+    /* width: 1240px; */
+    margin-right: 50px;
+    margin-top: 40px;
+}
+.design5 {
+    background-image: url('/assets/handshake.jpg');
+    width: 1140px;
+    height: 313px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    text-align: center;
+    padding-top: 10px;
+    margin-left: 150px;
+    margin-top: 60px;
+    border-radius: 10px;
+}
+
+.design5-title {
+    color: rgb(255, 255, 255);
+    font-family: Azeret Mono;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: center;
+    padding-top: 100px;
+}
+
+.design5-discription {
+    color: rgb(255, 255, 255);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: center;
+    opacity: 0.7;
+    margin-top: 20px;
+}
+
+.design5-text {
+    background-color: rgb(255, 255, 255);
+    padding: 10px;
+    width: 300px;
+    height: 20px;
+    border: none;
+    border-radius: 6px;
+    margin-top: 20px;
+}
+
+.design5-btn {
+    padding: 12px;
+    width: 100px;
+    border-radius: 6px;
+    border: none;
+}
+.footer-title {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 23px;
+    letter-spacing: 0%;
+    text-align: center;
+    padding-left: 80px;
+
+}
+.footer-style {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 16px;
+    background: rgba(13, 19, 33, 0.03);
+    margin-top: 80px;
+    padding: 12px;
+
+}
+.fb-style{
+    margin-left: 500px;
 }
 
